# sentio-plus

./: .gitignore  README.md  analyze_lengths.py  debug_imports.py  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: user_story.md
app/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
app/src/: __init__.py  dependencies.py  main.py  test_llm.py  test_rag.py  test_services.py
app/src/config/: logging.py  logging_conf.json  settings.py
app/src/prompts/: __init__.py  templates.py
app/src/routes/: __init__.py  agent.py  chat.py  ingest.py  query.py
app/src/schemas/: __init__.py  api.py
app/src/services/: __init__.py  agent.py  chat.py  ingest.py  llm.py  rag.py  tools.py  vector_store.py
docs/: draft_pipeline.md  example_pipeline.md  vibecode_outline.md
etl/: .gitignore  extract.py  load_chromadb.py  requiremtns.txt
notebooks/: rag_pipeline.ipynb  sentio_plus_rag.ipynb  start_data_pre_processing.ipynb  vc_preprocessing.ipynb
notebooks/data/processed/: preprocessing_steps.md  sentio_plus_product_scores.csv  sentio_plus_product_scores.parquet
rag/: rag_pipeline.ipynb
streamlit-app/: .dockerignore  Dockerfile  app.py  pyproject.toml
tests/: conftest.py
tests/etl_test/: test_extract.py  test_load_chromadb.py
web/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  setup.md
web/assets/: globals.css
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/demo/: page.tsx
